src/index.css
/* Global/Root Styles */

:root {
  --white: rgb(255, 255, 255);
  --black: rgb(27, 27, 27);
  --grey: rgb(150, 150, 150);
  --grey-dark: rgb(87, 87, 87);
  --grey-light: rgb(200, 200, 200);
  --background: rgb(250, 250, 250);
  --ff-red: rgb(235, 83, 98);
  --ff-red-gradient-light: rgb(251, 52, 90);
  --ff-red-gradient-dark: rgb(223, 24, 62);
  --ff-red-dark: rgb(184, 70, 81);
  --ff-blue: rgb(9, 182, 255);
  --ff-blue-dark: rgb(5, 136, 192);

  --control-width: 200px;
  --demo-width: calc(100vw - var(--control-width));
  --nav-height: 60px;
  --main-height: calc(100vh - var(--nav-height));
}

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  width: 100vw;
  color: var(--black);
  background-color: var(--white);
  font-size: 16px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

button {
  font-size: 0.9rem;
  padding: 10px;
  margin: 6px;
  border-style: none;
  border-radius: 4px;
  font-weight: bold;
  background-color: var(--grey);
  color: var(--white);
  cursor: pointer;
  width: 200px;
}

button:hover {
  background-color: var(--grey-dark);
  transition: 0.3s ease-in-out;
}

input {
  padding: 5px;
  margin: 5px;
  width: 300px;
  border-radius: 4px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

